--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "bcryptjs": "^2.4.3",
+    "btoa": "^1.2.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-fetch": "^3.1.6",
     "dotenv": "^16.0.3",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
