--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@errors": "./errors",
     "@controllers": "./controllers",
     "@models": "./models",
-    "@middlewares": "./middlewares",
-    "@v1": "./routes/stylewood"
+    "@middlewares": "./middlewares"
   },
   "_moduleDirectories": [
     "node_modules_custom"
